Add receitasienge endpoint
